fixed the setup of Actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.application.name=training
-
+#Exposing the additional endpoints by actuator
+management.endpoints.web.exposure.include=health,info
+management.info.env.enabled=true
+info.app.name=Employee Management System
+info.app.version=1.0.0
+info.app.changelogs.info=New Config
 # Static Values
-user.name = Ankit
-user.role = Admin
-
+user.name=Ankit
+user.role=Admin
 spring.devtools.restart.enabled=true
-
 # DATABASE CONNECTION SETTINGS
 spring.datasource.url=jdbc:mysql://localhost:3306/${spring.application.name}
 spring.datasource.username=root
@@ -15,6 +18,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
 # Optional (helps with errors)
 spring.sql.init.mode=always
