--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=training
 #Exposing the additional endpoints by actuator
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=health
 management.info.env.enabled=true
+#Default Username and password
+spring.security.user.name=admin
+spring.security.user.password=nimda
+
 info.app.name=Employee Management System
 info.app.version=1.0.0
 info.app.changelogs.info=New Config
